--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "CSCI 6421 Distributed Systems - Sprint 2023"
+title: "CSCI 6421 Distributed Systems - Spring 2024"
 email: roozbeh@gwu.edu
 author: Roozbeh Haghnazar
 description: > # this means to ignore newlines until "baseurl:"
-  GW CSCI 6421 Sprint 2023.
+  GW CSCI 6421 Spring 2024.
 
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "gwdistsys2023.github.io" # the base hostname & protocol for your site, e.g. http://example.com
